@@ -8,9 +8,12 @@ NEW FEATURES
 CHANGES
 * Optional parameters can be set for syn.norm(), syn.lognorm(), syn.sqrtnorm(),
   syn.cubertnorm(), syn.normrank(), syn.pmm().
+* In multi.compare() if `msel = NULL`, pooled synthetic data copies are 
+  compared with the original data.  
 
 BUG FIXES
-* 
+* In multi.compare() default colour and fill scales restored for ggplot() to
+  to allow for more than 9 levels/synthetic data sets to be plotted. 
 
 
 synthpop 1.7-0
